.kubernetes/00-namespace.yaml
# Namespace para la petición Firmas La Paz
apiVersion: v1
kind: Namespace
metadata:
  name: firmaslapaz
  labels:
    app: firmaslapaz
    environment: production
